apps/base/unifi/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-db
  namespace: unifi
  labels:
    app: unifi-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-db
  template:
    metadata:
      labels:
        app: unifi-db
    spec:
      containers:
        - name: mongo
          image: mongo:6.0.11
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    [...]
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: db-data
              mountPath: /data/db
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: unifi-db
