apps/base/unifi/unifi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-network-application
  namespace: unifi
  labels:
    app: unifi
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
        - name: unifi
          image: lscr.io/linuxserver/unifi-network-application:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - name: https-ui
              containerPort: 8443
              protocol: TCP
            # Leaving the rest unexposed externally; still available inside the pod:
            - name: inform
              containerPort: 8080
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: discovery
              containerPort: 10001
              protocol: UDP
            - name: ssdp
              containerPort: 1900
              protocol: UDP
            - name: guest-https
              containerPort: 8843
              protocol: TCP
            - name: guest-http
              containerPort: 8880
              protocol: TCP
            - name: speedtest
              containerPort: 6789
              protocol: TCP
            - name: syslog
              containerPort: 5514
              protocol: UDP
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
      volumes:
        - name: config
          hostPath:
            path: /home/rcrumana/Dev/docker/unifi/config
            type: DirectoryOrCreate
