apps/base/unifi/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-db
  namespace: unifi
  labels:
    app: unifi-db
spec:
  type: ClusterIP
  selector:
    app: unifi-db
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
